# zen-temple

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  ZERO_LEGACY_ARCHITECTURE.md  pyproject.toml
.github/workflows/: test.yml
examples/: calculator_demo.html  calculator_demo.py  calculator_logic.py  counter_logic.py
examples/templates/: index.html
examples/templates/components/: calculator.html
examples/templates/layouts/: base.html
src/zen_temple/: __init__.py  cli.py  logic_layer.py  scaffold.py  template_manager.py  validator.py
tests/: conftest.py  test_calculator_logic.py  test_cli.py  test_logic_layer.py  test_scaffold.py  test_template_manager.py  test_validator.py
